--- a/block-BJaaeo/code/style.css
+++ b/block-BJaaeo/code/style.css
@@ -44,14 +44,12 @@ table {
 }
 
 /* general  */
-
 body {
     line-height: 1.5;
     font-size: 24px;
     font-weight: 600; 
    
 }
-
 .container {
     max-width: 350px;
     height: 450px;
@@ -65,7 +63,7 @@ h1 {
     margin: 20px 20px;
 }
 .result {
-    width: 275px;
+    width: 320px;
     height: 50px;
     background-color: black;
     border-radius: 10px;
@@ -79,11 +77,15 @@ h1 {
     display: flex;
     flex-wrap: wrap;
 }
+.color{
+    background-color: burlywood;
+}
 button {
     width: 50px;
     height: 50px;
     border-radius: 30px;
     margin: 15px;
+    font-weight: 500;
+    font-size: 16px;
 }
-
 
